<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/teal_700"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@id/radioGroup1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:orientation="vertical">

            <RadioButton
                android:id="@id/btnMomopay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/teal_700"
                android:checked="true"
                android:text="@string/momopay"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                android:typeface="monospace" />

            <RadioButton
                android:id="@id/btnZalopay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/teal_700"
                android:text="@string/zalopay"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                android:typeface="monospace" />

            <RadioButton
                android:id="@id/btnVnpay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/teal_700"
                android:text="@string/vnpay"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                android:typeface="monospace" />

            <RadioButton
                android:id="@id/btn9pay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/teal_700"
                android:text="@string/ninepay"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                android:typeface="monospace" />

            <RadioButton
                android:id="@id/btnOnepay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/teal_700"
                android:text="@string/onepay"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                android:typeface="monospace" />

            <RadioButton
                android:id="@id/btnAdyen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/teal_700"
                android:text="@string/adyen"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                android:typeface="monospace" />

        </RadioGroup>

        <RadioGroup
            android:id="@id/radioGroup2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:orientation="vertical">

            <RadioButton
                android:id="@id/btnShoppeePay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/teal_700"
                android:text="@string/shopeePay"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                android:typeface="monospace" />

            <RadioButton
                android:id="@id/btnEpay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/teal_700"
                android:text="@string/epay"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                android:typeface="monospace" />

            <RadioButton
                android:id="@id/btnOnepay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/teal_700"
                android:text="@string/onepay"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                android:typeface="monospace" />

            <RadioButton
                android:id="@id/btnOMISE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/teal_700"
                android:text="@string/omise"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                android:typeface="monospace" />

            <RadioButton
                android:id="@id/btnAsiaPay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/teal_700"
                android:text="@string/asiapay"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                android:typeface="monospace" />

        </RadioGroup>

    </LinearLayout>

    <Button
        android:id="@id/buttonPayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/payout"
        android:textSize="15sp"
        android:textStyle="bold"
        android:typeface="monospace" />

    <TextView
        android:id="@id/tvPaymentStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/payout_status"
        android:lines="15"
        android:padding="5dp"
        android:scrollbars="vertical"
        android:textColor="@color/black"
        android:textIsSelectable="true"
        android:textSize="15sp"
        android:textStyle="bold" />


</LinearLayout>